2008-02-07  Renato Caldas  <seventhguardian@gmail.com>

	* fvwm/add_window.c (setup_frame_window):
	add CWCursor to window's valuemask (from Marc Lehmann's argb patch)

2008-02-06  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* libs/PictureUtils.c (XPM_COLOR_CLOSENESS):
	fixed compile error

2008-02-05  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* libs/Colorset.c (CreateOffsetBackgroundPixmap):
	catch BadGC when updating root transparent window background

	* libs/XError.c (do_coredump):
	(ferror_set_temp_error_handler):
	(ferror_reset_error_handler)
	(ferror_call_next_error_handler):

	new helper functions
	* libs/XError.c (PrintXErrorAndCoredump):
	try to dump core the hard way

2008-02-04  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/colorset.c (parse_colorset):
	check for image != None before calling XDestroyImage

	* fvwm/ewmh_events.c (ewmh_WMStateMaxVert):
	(ewmh_WMStateMaxHoriz):
	(ewmh_WMStateModal):
	(ewmh_WMStateShaded):
	(ewmh_WMStateStaysOnTop):
	(ewmh_WMStateStaysOnBottom):
	handle the STATE_ADD command of the EWMH _NET_WM_STATE message from
	version 1.3
	also ignore the EWMH staysontop and staysonbottom hints if the
	EWMHIgnoreStackingOrderHints style is used

	* fvwm/colorset.c (parse_colorset):
	Fixed a sporadic crash when the root background set by gnome,
	fvwm-root, esetroot etc. changes and a root transparent colour set
	is used.

	* fvwm/colorset.c (parse_colorset):
	* libs/PictureUtils.c (alloc_color_dynamic_no_limit):
	* libs/Colorset.c (CreateOffsetBackgroundPixmap):
	* libs/PictureGraphics.c (PGrabXImage)
	(PGraphicsCreateTranslucent):
	use MyXGrabserver and MyXUngrabServer instead of doing the X calls
	directly!

2008-01-31  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* libs/PictureGraphics.c (PGrabXImage):
	fixed XImage memory leak
	(PCreateRenderPixmap):
	(PCreateDitherPixmap):
	Properly handle return code of FgetFImage()

2008-01-30  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>
